# lms_V2

./: AGENTS.md  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
apps/core/: utils.py
apps/courses/: tabs.py
apps/courses/views/: calendar.py
apps/learning/services/: enrollment_service.py
apps/learning/study/: views.py
apps/learning/study/tests/: test_views.py
apps/learning/tests/: test_enrollment.py  test_timetable.py
apps/templates/learning/teaching/: modal_update_assignment_comment.html
apps/ui_tests/tests/: test_ui_e2e.py
apps/users/management/: __init__.py
apps/users/management/commands/: __init__.py  ensure_testaccounts.py
docker-files/: Dockerfile
docs/: setup.md
frontend/: package-lock.json  package.json
frontend/src/v1/js/: bootstrap5-compat.js  main.js
frontend/src/v1/js/components/editor/: index.js
frontend/src/v1/js/courses/: courseDetails.js
frontend/src/v1/js/learning/: solution.js
frontend/src/v1/js/supervising/: index.js
frontend/src/v1/js/teaching/: index.js
frontend/src/v1/scss/: _bootstrap.custom.scss
frontend/src/v1/scss/center/: _themes.scss  _top_menu.scss  _variables.scss  style.scss
frontend/src/v1/scss/compat/: _bootstrap3.scss
frontend/src/v1/scss/components/: _buttons.scss  _editor.scss  _pagination.scss  _tabs.scss
frontend/src/v1/scss/pages/: _login.scss
frontend/webpack/: dev.config.js  v1.config.js
frontend/webpack/loaders/: strip-sourcemap-loader.js
lms/jinja2/lms/layouts/: _top_menu.html  v1_base.html
lms/jinja2/lms/teaching/: student_assignment_detail.html
lms/settings/: base.py  test.py
lms/templates/: _top_menu.html  base.html
locale/ru/LC_MESSAGES/: django.po
