[tool.poetry]
name = "lms"
version = "0.1.0"
description = "JetBrains Academy learning management system"
authors = ["JetBrains Academy <hello.lms@jetbrains.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "lms" },
    { include = "apps" },
]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "~23.2.0"
babel = "~2.15.0"
bleach = "~6.1.0"
boto3 = "~1.34.129"
crispy-bootstrap3 = "~2024.1"
Django = "~4.2"
django-autocomplete-light = "3.9.4"
django-bitfield = "~2.2.0"
django-choices = "1.7.2"
django-crispy-forms = "~2.2"
django-environ = "~0.11.2"
django-filter = "~23.5"
django-import-export = "~4.0.9"
django-jinja = "~2.11.0"
django-loginas = "~0.3.11"
django-model-utils = "4.4.0"
django-rq = "~2.10.1"
django-rosetta = "~0.10.0"
django-simple-menu = "~2.1.3"
django-storages = "~1.14.3"
django-taggit = "~5.0.1"
django-vanilla-views = "3.0.0"
django-webpack-loader = "~3.1.0"
django-recaptcha = "~4.0.0"
django-registration-redux = "~2.13"
django-ses = "~4.1.0"
djangorestframework = "~3.15.2"
djangorestframework-camel-case = "~1.4.2"
icalendar = "~5.0.13"
isoweek = "~1.3.3"
nbconvert = "~7.16.4"
numpy = "~1.26.4"
pillow = "~10.3.0"
psycopg2-binary = "~2.9.9"
pydantic = "~2.10"
python-dateutil = "~2.9.0.post0"
python-json-logger = "*"
python-magic = "~0.4.27"
pytz = "*"
requests = "~2.32.3"
rest-pandas = "1.1.0"
rules = "*"
rq = "~1.16.2"
social-auth-app-django = "~5.4.1"
social-auth-core = "~4.5.4"
sorl-thumbnail = "~12.10.0"
sqids = "~0.4.1"
sqlparse = "~0.5.0"
XlsxWriter = "~3.2.0"
cryptography = "*"
markdown2 = "~2.5.0"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "*"
django-debug-toolbar = "~4.4.2"
factory-boy = "~3.3.0"
pytest = "6.2.5"
pytest-cov = "*"
pytest-django = "*"
pytest-mock = "*"
pytest-pythonpath = "*"
pytest-xdist = "*"
testfixtures = "*"
time-machine = "*"
pytest-playwright = "<0.4"
playwright = "<1.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
